# citrine

./: .gitignore  404.html  Makefile  README.md  default.nix  flake.nix  index.html  lock.x86_64-linux.json  mkdocs.yml  objects.inv  pyproject.toml
.dream2nix/python/: editable-args.json
.github/workflows/: python-publish.yml
.virtual_documents/docs/: first_steps.ipynb
Untitled/: index.html
api/: index.html
docs/: Untitled.ipynb  api.md  first_steps.ipynb  first_steps.py  index.md
docs/.ipynb_checkpoints/: first_steps-checkpoint.ipynb
first_steps/: index.html
license/: index.html
search/: search_index.json
src/citrine/: __init__.py  brightness_heralding.py  citrine.py  citrine.pyi  crystals.py  crystals.pyi  phase_matching.py  pump_envelope.py
src/citrine/citrine/: citrine.pyi  crystals.pyi
testing/: antisymmetric.py  example.ipynb  focusing.py  pump-envelopes.py  simulation_jsa_1.py  smirr.py  test.ipynb  wavelength-difference.py
testing/.ipynb_checkpoints/: example-checkpoint.ipynb  simulation_jsa_1-Copy1-checkpoint.py  simulation_jsa_1-checkpoint.py  test-checkpoint.ipynb
