[project]
name = "citrine"
version = "0.2.0"
description = ""
authors = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
readme = "README.md"
dependencies = ["numpy", "scipy", "matplotlib", "seaborn", "tqdm", "numba"]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/Peter-Barrow/citrine"
Repository = "https://github.com/Peter-Barrow/citrine.git"
Issues = "https://github.com/Peter-Barrow/citrine/issues"
# Documentation = ""

[build-system]
requires = ["setuptools", "build", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# # where = [
# #     "src/citrine"
# # ]
# exclude = ["site", "testing"]

[tool.uv]
managed = true
